--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "next": "14.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.1.2"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
     "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.2"
+    "typescript": "^5.3.3"
   }
 }
