--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=18.17.1"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -25,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "geist": "^1.2.2",
     "i18next": "^23.10.1",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
