--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "i18next": "^23.10.1",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
+    "react-code-block": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "tailwind-merge": "^2.2.1",
